# cofoundry-crawl

./: Cargo.toml  install.sh
.claude/skills/visual-qa/: SKILL.md
.claude/skills/visual-qa-click/: SKILL.md
.claude/skills/visual-qa-mosaic/: SKILL.md
.claude/skills/visual-qa-types/: SKILL.md
.claude/skills/visual-qa/sources/: click-crawl.ts  credential-prompt.ts  index.ts  mosaic-crawl.ts  package.json  spa-crawl.ts
.github/workflows/: release.yml
src/: config.rs  main.rs
src/crawler/: browser.rs  dedup.rs  extractor.rs  fetcher.rs  frontier.rs  mod.rs
src/mcp/: mod.rs  server.rs  tools.rs
