[package]
name = "cofoundry-crawl"
version = "0.1.0"
edition = "2021"
description = "High-performance web crawler with MCP server interface"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "cookies", "gzip", "brotli"] }

# HTML parsing
scraper = "0.22"

# URL handling
url = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# MCP server
# rmcp = { version = "1", features = ["server", "transport-io"] }  # TODO: wire up MCP

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Rate limiting
governor = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# Regex for content extraction
regex = "1"

# Chrono for timestamps
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
wiremock = "0.6"
