[package]
name = "cofoundry-crawl"
version = "0.2.0"
edition = "2021"
description = "High-performance web crawler with MCP server — supports SPA rendering and dark web"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# HTTP client
reqwest = { version = "0.12", features = ["json", "cookies", "gzip", "brotli", "socks"] }

# Headless Chrome (SPA rendering + screenshots)
chromiumoxide = "0.9"

# HTML parsing
scraper = "0.22"

# URL handling
url = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Rate limiting
governor = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# Regex for content extraction
regex = "1"

# Chrono for timestamps
chrono = { version = "0.4", features = ["serde"] }

# Base64 for screenshot encoding
base64 = "0.22"

[dev-dependencies]
wiremock = "0.6"
